# glerm

./: .gitignore  Makefile  README.md  gleam.toml  justfile  manifest.toml
.github/workflows/: test.yml
examples/printer/: README.md  gleam.toml  manifest.toml
examples/printer/.github/workflows/: test.yml
examples/printer/src/: printer.gleam
native/: Cargo.toml
native/src/: lib.rs
src/: glerm.gleam  glerm_ffi.erl  glerm_ffi.ex
src/glerm/: event.gleam  event_manager.gleam  layout.gleam  renderer.gleam  runtime.gleam  screen.gleam
test/glerm/: layout_test.gleam
