[package]
name = "glerm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "glerm"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
crossterm = { version = "0.26.1" }
rustler = "0.28.0"
serde = "1.0.163"
