[package]
name = "glerm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "glerm"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
crossterm = { version = "0.26.1" }
rustler = "0.29.1"
serde = "1.0.163"
